# purriler

./: CMakeLists.txt  README.md  run.sh
example/: build.purr
example/src/: main.cpp
example/src/analysis/: number_analyzer.cpp  number_analyzer.hpp
example/src/geometry/: circle.cpp  circle.hpp  point.cpp  point.hpp  shape.hpp
example/src/utils/: pattern.cpp  pattern.hpp  random.cpp  random.hpp
include/compiler/: options.hpp  ui.hpp
src/: main.cpp  options.cpp  ui.cpp
utility/: build-system.sh  build.sh  clean.sh  install.sh  run.sh  test.sh
